syntax = "proto3";

package l2;

message XConnectPair {
    string receive_interface = 2;               /* receive interface name */
    string transmit_interface = 3;              /* transmit interface name */
}